# tauri-plugin-rtc

./: Cargo.toml  README.md  package.json  tsconfig.json
guest-js/: index.ts  rtc_certificate.ts  rtc_codec_stats.ts  rtc_dtls_transport.ts  rtc_error.ts  rtc_error_event.ts  rtc_identity_assertion.ts  rtc_peer_connection.ts  rtc_sctp_transport.ts  rtc_session_description.ts  rtc_stats_report.ts  rtc_track_event.ts  rtc_transform_event.ts
guest-js/data/: rtc_data_channel_event.ts
guest-js/data_channel/: index.ts  rtc_data_channel.ts  rtc_data_channel_event.ts  rtc_data_channel_stats.ts
guest-js/dtmf/: index.ts  rtc_dtmf_sender.ts  rtc_dtmf_tone_change_event.ts
guest-js/encode/: index.ts  rtc_audio_source_stats.ts  rtc_encoded_audio_frame.ts  rtc_encoded_video_frame.ts  rtc_video_source_stats.ts
guest-js/ice/: index.ts  rtc_ice_candidate.ts  rtc_ice_candidate_pair.ts  rtc_ice_candidate_pair_stats.ts  rtc_ice_candidate_stats.ts  rtc_ice_parameters.ts  rtc_ice_transport.ts
guest-js/peer/: index.ts  rtc_peer_connection.ts  rtc_peer_connection_ice_error_event.ts  rtc_peer_connection_ice_event.ts  rtc_peer_connection_stats.ts
guest-js/rtp/: index.ts  rtc_inbound_rtp_stream_stats.ts  rtc_outbound_rtp_stream_stats.ts  rtc_remote_inbound_rtp_stream_stats.ts  rtc_remote_outbound_rtp_stream_stats.ts  rtc_rtp_receiver.ts  rtc_rtp_script_transform.ts  rtc_rtp_script_transformer.ts  rtc_rtp_sender.ts  rtc_rtp_transceiver.ts
src/: commands.rs  desktop.rs  lib.rs  mobile.rs
tauri-app/: package.json
tauri-app/src/: App.svelte
tauri-app/src-tauri/: Cargo.toml
(+2 files in other folders)
