[package]
name = "tauri-plugin-rtc"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-rtc"

[dependencies]
tauri = { version = "2.9.4" }
serde = "1.0"
thiserror = "2"
webrtc = { version = "0.14.0", features = ["vendored-openssl"]

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }
